<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/calibrate"
        android:icon="@drawable/ic_toolbar_calibrate"
        android:title="@string/calibrate"
        app:showAsAction="always"
        android:visible="false"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/toolbar_temperature"
        android:icon="@drawable/ic_toolbar_temperature"
        android:title="@string/switch_temperature"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_reset"
        android:icon="@drawable/ic_toolbar_reset"
        android:title="@string/reset_positioning"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_switch"
        android:icon="@drawable/ic_toolbar_switch"
        android:title="@string/switch_camera"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_shuffle"
        android:icon="@drawable/ic_toolbar_shuffle"
        android:title="@string/switch_mode"
        app:showAsAction="always" />
</menu>