<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <!-- Title  -->

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/Widget.AppCompat.ActionBar.Solid">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:divider="@drawable/divider"
            android:dividerPadding="8dp"
            android:background="#00aaaa00">

            <TextView
                android:id="@+id/connect_flir_one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#000"
                android:onClick="connectFlirOne"
                android:text="@string/connect_f1_text"
                android:textColor="#fff"
                android:gravity="center_vertical"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="5dp"
                android:paddingHorizontal="10dp"
                android:textSize="4pt" />

            <TextView
                android:id="@+id/connect_s1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#000"
                android:onClick="connectSimulatorOne"
                android:text="@string/connect_sim1_text"
                android:textColor="#fff"
                android:gravity="center_vertical"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="5dp"
                android:paddingHorizontal="10dp"
                android:textSize="4pt" />

            <TextView
                android:id="@+id/connect_s2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#000"
                android:onClick="connectSimulatorTwo"
                android:text="@string/connect_sim2_text"
                android:textColor="#fff"
                android:gravity="center_vertical"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="5dp"
                android:paddingHorizontal="10dp"
                android:textSize="4pt" />

            <TextView
                android:id="@+id/disconnect_any"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#000"
                android:onClick="disconnect"
                android:text="@string/disconnect_text"
                android:textColor="#fff"
                android:gravity="center_vertical"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="5dp"
                android:paddingHorizontal="10dp"
                android:textSize="4pt" />

        </LinearLayout>

    </Toolbar>

    <TextView
        android:id="@+id/discovery_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discovery_status_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/connection_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_status_text"/>


    <!-- Connect to FLIR ONE / Emulators buttons  -->
    <Button
        android:id="@+id/discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:background="#000"
        android:layout_gravity="center_horizontal"
        android:onClick="startDiscovery"
        android:paddingHorizontal="10dp"
        android:text="@string/discover_text"
        android:textColor="#fff"
        android:textSize="4pt" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/msx_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:minWidth="50dp"
            android:maxWidth="50dp"
            android:contentDescription="@string/msx_image_desc" />

        <ImageView
            android:id="@+id/photo_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_below="@+id/msx_image"
            android:layout_marginTop="15dp"
            android:minWidth="50dp"
            android:maxWidth="50dp"
            android:contentDescription="@string/photo_image_desc" />

        <!-- Show SDK version  -->
        <TextView
            android:id="@+id/sdk_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:text="@string/sdk_version_text"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>