<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor"
    android:forceDarkAllowed="true"
    android:orientation="vertical"
    tools:context=".FlirCameraActivity">

    <!-- Title  -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/msx_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/msx_image_desc"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/photo_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/photo_image_desc"
            android:scaleType="fitCenter"
            android:visibility="invisible" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <!-- Show SDK version  -->
        <TextView
            android:id="@+id/sdk_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sdk_version_text"
            android:textColor="?attr/textColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/connection_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/connection_status_text"
            android:textColor="?attr/textColor"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>